MOSIP-32454: Java21 Migration
Signed-off-by: HimajaDhanyamraju2 <dhanyamraju.himaja2@mindtree.com>