@@ -6,12 +6,11 @@
 	<parent>
 		<groupId>io.mosip.registration</groupId>
 		<artifactId>registration-client-parent</artifactId>
-		<version>1.2.1-SNAPSHOT</version>
+		<version>1.2.1-java21-SNAPSHOT</version>
 	</parent>
 	<artifactId>registration-services</artifactId>
 	<name>registration-services</name>
 	<description>Maven project of MOSIP Registration Service</description>
-	<version>1.2.1-SNAPSHOT</version>
 
 	<dependencies>
 		<!-- Lombok -->
@@ -25,15 +24,24 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.junit.vintage</groupId>
+			<artifactId>junit-vintage-engine</artifactId>
+			<version>5.10.2</version>
+		</dependency>
+		<dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>4.0.1</version>
+        </dependency>
+		<dependency>
 			<groupId>org.powermock</groupId>
-			<artifactId>powermock-module-junit4</artifactId>
-			<version>2.0.0-RC.3</version>
+			<artifactId>powermock-module-junit4</artifactId>			
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mvel</groupId>
 			<artifactId>mvel2</artifactId>
-			<version>2.4.7.Final</version>
+			<version>2.5.2.Final</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
@@ -62,20 +70,13 @@
 		</dependency>
 		<dependency>
 			<groupId>org.powermock</groupId>
-			<artifactId>powermock-api-mockito2</artifactId>
-			<version>2.0.7</version>
+			<artifactId>powermock-api-mockito2</artifactId>			
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>net.bytebuddy</groupId>
-			<artifactId>byte-buddy</artifactId>
-			<version>1.10.13</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
-			<version>1.10.19</version>
-			<scope>test</scope>
+			<artifactId>mockito-core</artifactId>
+			<version>3.11.2</version>
 		</dependency>
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
@@ -113,7 +114,16 @@
 					<groupId>com.fasterxml.jackson.core</groupId>
 					<artifactId>jackson-databind</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>org.springframework</groupId>
+    				<artifactId>spring-orm</artifactId>
+				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+    		<groupId>org.springframework</groupId>
+    		<artifactId>spring-orm</artifactId>
+    		<version>6.1.4</version>
 		</dependency>
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
@@ -222,6 +232,11 @@
 			<artifactId>derbytools</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>net.bytebuddy</groupId>
+			<artifactId>byte-buddy</artifactId>
+			<version>${bytebuddy.version}</version>
+        </dependency>
+		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-logger-logback</artifactId>
 			<exclusions>
@@ -246,6 +261,10 @@
 				<exclusion>
 					<groupId>com.fasterxml.jackson.core</groupId>
 					<artifactId>jackson-databind</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.springframework</groupId>
+    				<artifactId>spring-orm</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
@@ -357,21 +376,6 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>io.mosip.kernel</groupId>
-			<artifactId>kernel-idobjectvalidator</artifactId>
-			<exclusions>
-				<exclusion>
-					<groupId>io.mosip.kernel</groupId>
-					<artifactId>kernel-logger-logback</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>com.fasterxml.jackson.core</groupId>
-					<artifactId>jackson-databind</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-
-		<dependency>
 			<artifactId>kernel-biosdk-provider</artifactId>
 			<groupId>io.mosip.kernel</groupId>
 			<version>${mosip.core.kernel.version}</version>
@@ -388,8 +392,7 @@
 		</dependency>
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
-			<artifactId>jaxb-api</artifactId>
-			<version>2.3.1</version>
+			<artifactId>jaxb-api</artifactId>		
 		</dependency>
 		<dependency>
 			<groupId>io.mosip.commons</groupId>
@@ -421,7 +424,7 @@
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-biometrics-api</artifactId>
-			<version>${mosip.core.kernel.version}</version>
+			<version>${mosip.biometric.util.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>io.mosip.kernel</groupId>
@@ -462,7 +465,7 @@
 		<dependency>
 			<groupId>io.mosip.registration</groupId>
 			<artifactId>registration-api</artifactId>
-			<version>${mosip.core.kernel.version}</version>
+			<version>${mosip.registration.client.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>io.mosip.kernel</groupId>
@@ -474,7 +477,7 @@
 		<dependency>
 			<groupId>io.mosip.registration</groupId>
 			<artifactId>registration-api-stub-impl</artifactId>
-			<version>${mosip.core.kernel.version}</version>
+			<version>${mosip.registration.client.version}</version>
 		</dependency>
 
 		<dependency>
@@ -522,7 +525,39 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
-						<version>2.12.4</version>
+						<version>${maven.surefire.plugin.version}</version>
+						<configuration>
+							<skipTests>false</skipTests>
+							<skip>false</skip>
+							<argLine>
+								${argLine}
+								--add-opens java.xml/jdk.xml.internal=ALL-UNNAMED
+								--add-opens java.base/java.lang=ALL-UNNAMED
+								--add-opens java.base/java.net=ALL-UNNAMED
+								--add-opens java.base/java.util=ALL-UNNAMED
+								--add-opens java.base/java.time=ALL-UNNAMED
+								--add-opens java.base/java.math=ALL-UNNAMED
+								--add-opens java.base/java.io=ALL-UNNAMED
+								--add-opens java.base/java.util.jar=ALL-UNNAMED
+								--add-opens java.base/java.security.cert=ALL-UNNAMED
+								--add-opens java.base/java.util.regex=ALL-UNNAMED
+								--add-opens java.base/java.util.stream=ALL-UNNAMED
+								--add-opens java.base/java.text=ALL-UNNAMED
+								--add-opens java.base/java.security=ALL-UNNAMED
+								--add-opens java.sql/java.sql=ALL-UNNAMED
+								--add-opens java.base/java.util.zip=ALL-UNNAMED
+								--add-opens java.base/java.lang.reflect=ALL-UNNAMED
+								--add-opens java.base/sun.security.util=ALL-UNNAMED
+								--add-exports java.base/jdk.internal.access=ALL-UNNAMED
+								--add-exports java.base/jdk.internal.util=ALL-UNNAMED
+								--add-exports java.desktop/sun.awt=ALL-UNNAMED
+								--add-exports java.desktop/sun.awt.util=ALL-UNNAMED
+								--add-exports java.desktop/sun.awt.image=ALL-UNNAMED
+								--add-exports java.desktop/sun.java2d=ALL-UNNAMED
+								--illegal-access=debug
+								--enable-preview
+							</argLine>
+						</configuration>
 						<!--<configuration><skipTests>true</skipTests></configuration>-->
 					</plugin>
 					<plugin>
@@ -558,15 +593,44 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
-						<version>2.12.4</version>
+						<version>${maven.surefire.plugin.version}</version>
 						<configuration>
 							<skipTests>false</skipTests>
+							<skip>false</skip>
+							<argLine>
+								${argLine}
+								--add-opens java.xml/jdk.xml.internal=ALL-UNNAMED
+								--add-opens java.base/java.lang=ALL-UNNAMED
+								--add-opens java.base/java.net=ALL-UNNAMED
+								--add-opens java.base/java.util=ALL-UNNAMED
+								--add-opens java.base/java.time=ALL-UNNAMED
+								--add-opens java.base/java.math=ALL-UNNAMED
+								--add-opens java.base/java.io=ALL-UNNAMED
+								--add-opens java.base/java.util.jar=ALL-UNNAMED
+								--add-opens java.base/java.security.cert=ALL-UNNAMED
+								--add-opens java.base/java.util.regex=ALL-UNNAMED
+								--add-opens java.base/java.util.stream=ALL-UNNAMED
+								--add-opens java.base/java.text=ALL-UNNAMED
+								--add-opens java.base/java.security=ALL-UNNAMED
+								--add-opens java.sql/java.sql=ALL-UNNAMED
+								--add-opens java.base/java.util.zip=ALL-UNNAMED
+								--add-opens java.base/java.lang.reflect=ALL-UNNAMED
+								--add-opens java.base/sun.security.util=ALL-UNNAMED
+								--add-exports java.base/jdk.internal.access=ALL-UNNAMED
+								--add-exports java.base/jdk.internal.util=ALL-UNNAMED
+								--add-exports java.desktop/sun.awt=ALL-UNNAMED
+								--add-exports java.desktop/sun.awt.util=ALL-UNNAMED
+								--add-exports java.desktop/sun.awt.image=ALL-UNNAMED
+								--add-exports java.desktop/sun.java2d=ALL-UNNAMED
+								--illegal-access=debug
+								--enable-preview
+							</argLine>
 							<excludes>
 								<exclude>**/integrationtest/*.java</exclude>
 							</excludes>
 						</configuration>
 					</plugin>
-				                    <plugin>
+				    <plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-antrun-plugin</artifactId>
 						<version>3.0.0</version>
